--- a/application/src/main/res/drawable/all_ic_diamond_unchecked.xml
+++ b/application/src/main/res/drawable/all_ic_diamond_unchecked.xml
@@ -1,34 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="574.000000dp"
-    android:height="401.000000dp"
-    android:viewportWidth="574.000000"
-    android:viewportHeight="401.000000">
-
+    android:viewportWidth="24"
+    android:viewportHeight="24"
+    android:width="24dp"
+    android:height="24dp">
     <group
-        android:translateY="401.000000"
-        android:scaleX="0.100000"
-        android:scaleY="-0.100000">
-        <path
-            android:fillColor="#FFF"
-            android:strokeWidth="1"
-            android:pathData="M762 3798 c-5 -7 -148 -215 -316 -462 l-306 -449 0 -163 0 -163 1092 -1047 c601
--576 1152 -1105 1223 -1174 72 -69 159 -150 195 -180 36 -30 84 -73 108 -97 23 -24
-47 -43 52 -43 5 0 34 22 65 50 30 27 89 76 130 110 42 33 611 569 1265 1191 l1190
-1132 0 169 0 169 -321 462 c-177 254 -331 472 -342 485 l-20 22 -2003 0 c-1589 0
--2004 -3 -2012 -12z m2503 -493 c356 -322 405 -370 384 -375 -13 -3 -400 -3 -859 0
-l-835 5 430 373 c317 275 436 372 451 370 12 -2 205 -169 429 -373z m1092 271 c-10
--25 -332 -481 -342 -484 -12 -3 -546 470 -539 478 3 3 186 8 407 11 221 3 419 6
-441 7 29 2 37 -1 33 -12z m-2187 0 c0 -10 -534 -496 -541 -494 -5 2 -80 112 -168
-245 l-160 243 222 3 c502 6 647 7 647 3z m2763 -371 c117 -159 217 -296 221 -304 7
--11 -54 -12 -380 -6 -213 4 -398 11 -410 14 -21 6 -10 26 159 299 99 161 184 291
-188 290 5 -2 104 -133 222 -293z m-3823 -13 c106 -150 190 -275 188 -278 -3 -2
--181 -3 -397 -2 l-392 3 77 110 c42 61 131 188 197 283 65 96 123 170 127 165 4 -4
-94 -131 200 -281z m2678 -587 c1 -1 -216 -510 -481 -1131 -266 -622 -486 -1136
--488 -1143 -3 -9 -903 2111 -967 2280 -3 7 1927 1 1936 -6z m-1941 -827 c199 -452
-361 -823 359 -825 -3 -3 -156 139 -1016 946 -261 245 -525 493 -587 551 -62 57
--111 106 -109 108 8 7 673 39 831 40 l160 2 362 -822z m2813 797 c255 -14 465 -27
-467 -29 3 -3 -175 -175 -1097 -1055 -245 -234 -485 -464 -534 -511 -49 -47 -87 -80
--85 -73 2 6 171 390 374 852 313 712 373 841 390 841 11 0 229 -11 485 -25z" />
+        android:translateX="293"
+        android:translateY="-385">
+        <group
+            android:scaleX="0.1"
+            android:scaleY="-0.1"
+            android:translateY="401">
+            <path
+                android:pathData="M-2897.5 101.2c-0.2 -0.3 -6.2 -9 -13.3 -19.4l-12.9 -18.9 0 -6.9 0 -6.9 45.9 -44c25.3 -24.2 48.4 -46.4 51.4 -49.4 3 -2.9 6.7 -6.3 8.2 -7.6 1.5 -1.3 3.5 -3.1 4.5 -4.1 1 -1 2 -1.8 2.2 -1.8 0.2 0 1.4 0.9 2.7 2.1 1.3 1.1 3.7 3.2 5.5 4.6 1.8 1.4 25.7 23.9 53.2 50.1l50 47.6 0 7.1 0 7.1 -13.5 19.4c-7.4 10.7 -13.9 19.8 -14.4 20.4l-0.8 0.9 -84.2 0c-66.7 0.2 -84.1 0.1 -84.5 -0.3zm105.2 -20.7c15 -13.5 17 -15.6 16.1 -15.8 -0.5 -0.1 -16.8 -0.1 -36.1 0l-35.1 0.2 18.1 15.7c13.3 11.6 18.3 15.6 19 15.6 0.5 -0.2 8.6 -7.2 18 -15.7zm45.9 11.3c-0.4 -1.1 -14 -20.2 -14.4 -20.3 -0.5 -0.1 -23 19.8 -22.7 20.1 0.1 0.1 7.8 0.3 17.1 0.5 9.3 0.1 17.6 0.3 18.5 0.3 1.4 0 1.7 -0.1 1.5 -0.6zm-91.9 0c0 -0.4 -22.4 -20.8 -22.7 -20.8 -0.2 0.1 -3.4 4.7 -7.1 10.3l-6.7 10.2 9.3 0.1c21.1 0.4 27.2 0.4 27.2 0.2zm116.1 -15.6c4.9 -6.7 9.1 -12.4 9.3 -12.8 0.3 -0.5 -2.3 -0.5 -16 -0.3 -9 0.2 -16.7 0.5 -17.2 0.6 -0.9 0.3 -0.4 1.1 6.7 12.6 4.2 6.8 7.7 12.2 7.9 12.2 0.2 0 4.4 -5.5 9.3 -12.3zm-160.7 -0.5c4.5 -6.3 8 -11.6 7.9 -11.7 -0.1 -0.1 -7.6 -0.1 -16.7 -0.1l-16.5 0.1 3.2 4.6c1.8 2.6 5.5 7.9 8.3 11.9 2.7 4 5.2 7.1 5.3 6.9 0.3 -0.1 4.1 -5.4 8.5 -11.7zM-2770.3 51c0 0 -9.1 -21.4 -20.2 -47.5 -11.2 -26.1 -20.4 -47.8 -20.5 -48 -0.1 -0.4 -38 88.7 -40.6 95.8 -0.2 0.3 80.9 0 81.3 -0.3zm-81.6 -34.7c8.4 -19 15.2 -34.6 15.1 -34.7 -0.1 -0.1 -6.6 5.8 -42.7 39.8 -11 10.3 -22.1 20.7 -24.7 23.2 -2.6 2.4 -4.7 4.5 -4.6 4.5 0.3 0.3 28.3 1.6 34.9 1.7l6.7 0.1 15.3 -34.6zm118.3 33.5c10.7 -0.6 19.5 -1.1 19.6 -1.2 0.1 -0.1 -7.4 -7.4 -46.1 -44.3 -10.3 -9.8 -20.4 -19.5 -22.4 -21.5 -2.1 -2 -3.7 -3.4 -3.6 -3.1 0.1 0.3 7.2 16.4 15.7 35.8 13.2 29.9 15.7 35.4 16.4 35.4 0.4 -0.1 9.6 -0.5 20.4 -1.1z"
+                android:fillColor="#FFF" />
+        </group>
     </group>
 </vector>
