Add: xml layouts.

--- a/application/src/main/res/layout/activity_main_feed.xml
+++ b/application/src/main/res/layout/activity_main_feed.xml
@@ -1,40 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/rec"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pl.hypeapp.episodie.ui.mainfeed.MainFeedActivity">
+    android:background="@color/primary">
+
+    <include
+        android:id="@id/toolbar_feed"
+        layout="@layout/toolbar_feed" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
-    <LinearLayout
+    <!--Due to view pager is above toolbar we need to provide transparent view which be imitate home button for clicks.-->
+    <View
+        android:id="@+id/toolbar_feed_home_button"
+        android:layout_width="50dp"
+        android:layout_alignTop="@id/toolbar_feed"
+        android:layout_alignBottom="@id/toolbar_feed"
+        android:layout_height="wrap_content" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_button_main_feed_search"
+        android:theme="@style/EpisodieTheme.FabButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/all_ic_search"
+        android:layout_above="@id/navigation_bottom_layout"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="12dp" />
+
+    <include
+        android:id="@+id/navigation_bottom_layout"
+        layout="@layout/bottom_navigation_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="bottom"
-        android:orientation="vertical">
+        android:layout_alignParentBottom="true" />
 
-        <android.support.design.widget.BottomNavigationView
-            android:id="@+id/navigation_bottom_view"
-            android:layout_width="match_parent"
-            android:layout_height="58dp"
-            android:background="@color/primary_dark"
-            app:elevation="0dp"
-            app:menu="@menu/my_navigation_items"/>
-
-        <View
-            android:id="@+id/navigation_bar_background"
-            android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:layout_gravity="bottom"
-            android:background="#272727"/>
-
-    </LinearLayout>
-
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
