--- a/application/src/main/res/values/dimens.xml
+++ b/application/src/main/res/values/dimens.xml
@@ -2,7 +2,7 @@
 <resources>
     <!--Naming convention: <WHAT>_<WHERE>_(OPTIONAL)<DESCRIPTION>_(OPTIONAL)<SIZE>-->
     <!--navigation bottom view-->
-    <dimen name="height_feed_navigation_bottom_end">58dp</dimen>
+    <dimen name="height_navigation_bottom_view">58dp</dimen>
     <dimen name="elevation_feed_navigation_bottom_view">0dp</dimen>
     <!--toolbar-->
     <dimen name="inset_start_toolbar">48dp</dimen>
@@ -20,8 +20,8 @@
     <dimen name="width_item_most_popular_runtime">30dp</dimen>
     <dimen name="height_item_most_popular_runtime">30dp</dimen>
     <dimen name="padding_top_item_most_popular_runtime">2dp</dimen>
-    <dimen name="padding_top_item_most_popular_title">4dp</dimen>
     <dimen name="text_size_item_most_popular_runtime">12sp</dimen>
+    <dimen name="text_size_item_most_popular_title">14sp</dimen>
     <!--top list fragment-->
     <dimen name="padding_text_view_top_list_appbar_title">52dp</dimen>
     <dimen name="text_size_top_list_appbar_title">30sp</dimen>
@@ -30,7 +30,6 @@
     <dimen name="text_size_item_top_list_title">18sp</dimen>
     <dimen name="width_item_top_list_cover">120dp</dimen>
     <dimen name="height_item_top_list_cover">170dp</dimen>
-    <dimen name="padding_big">16dp</dimen>
     <dimen name="text_size_item_top_list_position">42sp</dimen>
     <dimen name="size_item_top_list_runtime">30dp</dimen>
     <dimen name="padding_top_item_top_list_runtime">2dp</dimen>
@@ -39,15 +38,47 @@
     <dimen name="logo_drawer_size">64dp</dimen>
     <dimen name="size_drawer_text_item">20sp</dimen>
     <dimen name="width_drawer_item_icon">24dp</dimen>
+    <dimen name="padding_drawer">30dp</dimen>
+    <!--tv show info-->
+    <dimen name="size_tv_show_info_ic_more">24dp</dimen>
+    <dimen name="text_size_tv_show_info_header">20sp</dimen>
+    <dimen name="height_tv_show_info_ic_runtime">18dp</dimen>
+    <dimen name="height_tv_show_info_ic_network">18dp</dimen>
+    <dimen name="margin_bottom_tv_show_info_nested_scroll">32dp</dimen>
+    <!--tv show details-->
+    <dimen name="margin_top_tv_show_details_top_corner">32dp</dimen>
+    <dimen name="corner_radius_tv_show_details">8dp</dimen>
+    <dimen name="card_elevation_tv_show_details">12dp</dimen>
+    <dimen name="size_tv_show_details_ic_full_runtime">20dp</dimen>
+    <dimen name="text_size_tv_show_details_full_runtime">16sp</dimen>
+    <dimen name="text_size_tv_show_details_title">20sp</dimen>
+    <dimen name="corner_radius_tv_show_details_cover">3dp</dimen>
+    <dimen name="card_elevation_tv_show_details_cover">4dp</dimen>
+    <dimen name="width_tv_show_details_cover">120dp</dimen>
+    <dimen name="height_tv_show_details_cover">170dp</dimen>
+    <dimen name="height_tab_indicator">1dp</dimen>
+    <dimen name="padding_bottom_tv_show_details_tab">4dp</dimen>
+    <dimen name="height_tab_layout">40dp</dimen>
+    <dimen name="width_height_all_diamond">24dp</dimen>
+    <dimen name="margin_bottom_tv_show_details_fab_button">48dp</dimen>
+    <dimen name="margin_end_tv_show_details_fab_button">32dp</dimen>
+    <dimen name="padding_top_tv_show_details_fab_button">2dp</dimen>
+    <!--item season-->
+    <dimen name="width_item_season_screen">70dp</dimen>
+    <dimen name="height_item_season_screen">90dp</dimen>
+    <!--seasons fragment-->
+    <dimen name="margin_bottom_fragment_season_recycler_view">64dp</dimen>
     <!--misc-->
     <dimen name="padding_bottom_item_all">36dp</dimen>
     <dimen name="padding_top_item_all">24dp</dimen>
+    <dimen name="padding_small">4dp</dimen>
+    <dimen name="padding_big">16dp</dimen>
+    <dimen name="padding_default">8dp</dimen>
     <dimen name="border_width_fab_button">0dp</dimen>
     <dimen name="status_bar_padding">0dp</dimen>
     <dimen name="margin_default">8dp</dimen>
     <dimen name="margin_small">4dp</dimen>
+    <dimen name="margin_medium">16dp</dimen>
     <dimen name="margin_big">16dp</dimen>
-    <dimen name="padding_drawer">30dp</dimen>
     <dimen name="height_all_diamond">24dp</dimen>
-    <dimen name="width_height_all_diamond">24dp</dimen>
 </resources>
