--- a/application/src/main/res/values-land/colors.xml
+++ b/application/src/main/res/values-land/colors.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="navigation_bar_color">#222222</color>
+    <color name="default_navigation_bar">#222222</color>
 </resources>
