--- a/application/src/main/res/values-v21/dimens.xml
+++ b/application/src/main/res/values-v21/dimens.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="status_bar_padding">24dp</dimen>
-
     <dimen name="fab_button_elevation">8dp</dimen>
     <dimen name="fab_button_pressed_translation_z">12dp</dimen>
-
+    <dimen name="elevation_tab_layout">12dp</dimen>
 </resources>
