--- a/application/src/main/res/layout/activity_tv_show_details.xml
+++ b/application/src/main/res/layout/activity_tv_show_details.xml
@@ -12,7 +12,8 @@
         app:layout_constraintBottom_toTopOf="@id/guideline_backdrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:noiseIntensity="0.15" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline_backdrop"
@@ -37,7 +38,7 @@
         android:id="@+id/image_view_tv_show_details_ic_share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/tv_show_details_ic_share_description"
+        android:contentDescription="@string/all_ic_share_description"
         android:padding="@dimen/padding_big"
         android:src="@drawable/all_ic_share"
         app:layout_constraintBottom_toBottomOf="@id/image_view_tv_show_details_ic_back_arrow"
@@ -234,7 +235,6 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_bottom_tv_show_details_fab_button"
             android:layout_marginEnd="@dimen/margin_end_tv_show_details_fab_button"
-            android:paddingTop="@dimen/padding_top_tv_show_details_fab_button"
             android:src="@drawable/all_ic_diamond_unchecked"
             android:theme="@style/EpisodieTheme.FabButton"
             app:layout_anchor="@id/view_pager_tv_show_details"
@@ -260,6 +260,5 @@
         app:layout_constraintEnd_toEndOf="@id/image_view_tv_show_details_ic_share"
         app:layout_constraintStart_toStartOf="@id/image_view_tv_show_details_ic_share"
         app:layout_constraintTop_toTopOf="@id/image_view_tv_show_details_ic_share" />
-
 
 </android.support.constraint.ConstraintLayout>
